clearning up rest objs
