# tasc_exercise/api/swagger/swagger.yaml
@@ -311,7 +311,24 @@ definitions:
       items:
         type: array
         items:
-          $ref: "#/definitions/Item"
+          properties:
+            id:
+              type: integer
+              format: int64
+            name:
+              type: string
+            type:
+              type: string
+            import:
+              type: boolean
+            except:
+              type: boolean
+            price:
+              type: number
+              format: double
+            quantity:
+              type: integer
+              format: int64
 
   Item:
     properties:
@@ -329,8 +346,5 @@ definitions:
       price:
         type: number
         format: double
-      quantity:
-        type: integer
-        format: int64
     xml:
       name: Item
